--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
